--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
 ---
-- name: testing 
-  command: ls /tmp
-  register: command_result
-  ignore_errors: True
+- hosts: "{{node}}"  
+  become: yes
+  roles:
+    - "{{role}}"
